--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.Alp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primary</item>
+        <item name="colorOnPrimary">@color/primary</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -60,4 +60,16 @@
     </style>
     <style name="Theme.Alp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.Alp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!--    buttonNavigation-->
+    <style name="navigationBottom" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+        <item name="android:background">@color/teal_200</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!--    buttonAbuAbu-->
+    <style name="secondaryGRPButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@color/white</item>
+        <item name="colorPrimary">@android:color/black</item>
+    </style>
 </resources>
