--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -177,7 +177,7 @@
 
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttonLogin"
+            android:id="@+id/buttonUpdate"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
