--- a/app/src/main/res/layout/activity_detail_project.xml
+++ b/app/src/main/res/layout/activity_detail_project.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="#375DBC"
         app:itemIconTint="@color/icons_color"
         app:menu="@menu/bottom_navigation_menu" />
 
