--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent"
             tools:listitem="@layout/item_row"
             android:layout_marginTop="55dp"/>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -26,16 +27,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:id="@+id/toolbar"
-            android:background="@color/primary"/>
-
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragment_container"/>
+            android:id="@+id/fragment_container">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/primary" />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -46,5 +48,6 @@
         android:layout_gravity="start"
         app:menu="@menu/navigation_menu"
         app:headerLayout="@layout/layout_navigation_header"/>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
