--- a/app/src/main/res/layout/activity_detail_project.xml
+++ b/app/src/main/res/layout/activity_detail_project.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Activity.DetailProjectActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         style="@style/navigationBottom"
