--- a/app/src/main/res/layout/activity_detail_project.xml
+++ b/app/src/main/res/layout/activity_detail_project.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.DetailProjectActivity">
+    tools:context=".ui.detailproject.DetailProjectActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
