--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.UpdateProfileActivity">
+    tools:context=".ui.profile.UpdateProfileActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
